--- a/src/styles/MapPage.css
+++ b/src/styles/MapPage.css
@@ -1,5 +1,6 @@
 .map-page {
     position: relative;
+
 }
 
 .overlay {
@@ -10,6 +11,10 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1000;
+}
+
+.map-page h1 {
+    color: rgb(31, 114, 149);
 }
 
 .popup-content {
