--- a/src/styles/LoginPage.css
+++ b/src/styles/LoginPage.css
@@ -12,11 +12,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 100vh;
     margin: 0;
     background: linear-gradient(-45deg, #00b7ff, #ff9b50, #00b7ff, #fa5d00);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+}
+
+.login-body .logo {
+    max-width: 400px;
+    margin-bottom: 20px;
 }
 
 @keyframes gradient {
@@ -43,7 +49,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 50px auto;
+    margin: 0 auto;
+    padding: 40px 20px;
 }
 
 .login-body .container h1 {
